tests/ui/issues/issue-15965.rs
fn main() {
    return
        { return () }
//~^ ERROR type annotations needed [E0282]
    ()
    ;
}
